fix bug , now only the current user see his page and his apartment . Fix map , now the marker is visible

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,6 +26,11 @@
   align-items: center;
 }
 
+#map {
+  width: 30vw;
+  height: 50vh;
+}
+
 .col-md-2 p {
   font-weight: bold;
 }
