--- a/resources/sass/_detailApt.scss
+++ b/resources/sass/_detailApt.scss
@@ -23,3 +23,12 @@
         align-items: center;
     }
 }
+
+
+#map {
+    width: 30vw;
+    height: 50vh;
+}
+
+               
+               
